[package]
name = "tub"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
build = "build.rs"

[dependencies]
num = "0.1"
rand = "0.3"
winapi = "0.2"
user32-sys = "0.1"
gdi32-sys = "0.2"
kernel32-sys = "0.2"
dwmapi-sys = "0.1"

[build-dependencies]
gl_generator = "0.4"
khronos_api = "1.0"

[dev-dependencies]
gfx = "0.9"
gfx_core = "0.1"
gfx_device_gl = "0.8"